# lines-of-battle

./: .gitignore  Cargo.toml  Protocol.md  README.md
arena-display/: ArenaDisplay.css  ArenaDisplay.html  DisplayLogic.js  README.md  settings.js  settings.json
example-client/: README.md  package-lock.json  package.json  tsconfig.json
example-client/src/: algorithm.ts  astar.ts  main.ts  priorityQueue.ts  protocol.ts  utils.ts
example-client/src/state/: attackAdjacentPlayer.ts  attackPlayer.ts  findWeapon.ts  moveOutOfWay.ts  state.ts
game-server/: .gitignore  Cargo.toml  Protocol.md  README.md
game-server/lua/: inspect.lua  weapon.lua
game-server/src/: main.rs
game-server/src/actors/: shared_messages.rs  websocket_messages.rs
game-server/src/errors/: error_response.rs  global_error_codes.rs  websocket_error.rs
game-server/src/handlers/: connect_player.rs  connect_viewer.rs
game-server/src/jwt/: audience.rs  jwt_data.rs  jwt_token.rs  (+1 more)
lua/: game.lua  playfield.lua
src/: config.rs  lib.rs  main.rs
src/actors/: game_mediator_actor.rs  mediator_messages.rs  message_types.rs  mod.rs  shared_messages.rs  viewer_actor.rs  websocket_actor.rs  websocket_messages.rs
src/errors/: game_engine_error.rs  global_error_codes.rs  mod.rs  service_error.rs  websocket_error.rs
src/game/: game_player.rs  game_state.rs  mod.rs  server_state.rs
src/handlers/: connect_player.rs  mod.rs
src/jwt/: audience.rs  jwt_data.rs  jwt_token.rs  websocket_token.rs
src/protocol/: actions.rs  game.rs  mod.rs  query.rs  registration.rs  tagged_request.rs  websocket.rs
(+3 files in other folders)
