[package]
name = "game-server"
version = "0.1.0"
authors = ["Bryan McClain <bryamccl@iu.edu>"]
edition = "2021"
default-run = "game-server"

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.0"
actix-http = "3.2.2"
actix-web = { version = "4", features = ["rustls"] }
actix-web-actors = "4.1.0"
actix-web-httpauth = "0.8.0"
anyhow = "1.0.65"
awc = { version = "3.0.1", features = ["rustls"] }
chrono = "0.4.22"
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
log = "0.4.17"
rustls = "0.20.2"
rustls-pemfile = "1"
serde = "1.0.144"
serde_json = { version = "1.0.85", features = ["preserve_order"] }
serde_repr = "0.1.9"
simple_logger = "2.3.0"
structopt = "0.3.26"
uuid-b64 = { version = "0.1.1", features = ["serde"] }